2006-11-08  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: add toolbar buttons
	* src/images/Makefile.am: install new svg files
	* src/images/parents.svg: button for toolbar
	* src/images/spouse.svg: button for toolbar
	* src/gramps_main.py: register new stock icons

2006-11-07  Don Allingham  <don@gramps-project.org>
	* src/plugins/RemoveUnused.py: general cleanup
	* src/DataViews/_RelationshipView.py: Optionally hide Edit buttons
	* src/Config/_GrampsConfigKeys.py: Optionally hide Edit buttons
	* src/GrampsWidgets.py: Allow empty button for LinkBox

2006-11-07  Alex Roitman  <shura@gramps-project.org>
	* src/DataViews/_RelationView.py (info_string): Add missing clause.

2006-11-07  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayModels/_PeopleModel.py: Make fallbacks for birth and
	death work again.
	* src/DataViews/_RelationView.py (write_title): Display fallbacks
	in case birth or death is not available
	* src/DataViews/_PedigreeView.py: Display fallbacks in case birth
	or death is not available

2006-11-06  Don Allingham  <don@gramps-project.org>
	* src/glade/gramps.glade: add tooltips for place buttons
	* src/GrampsWidgets.py: provide default instructions for place
	* src/DataViews/_MediaView.py: cancel drag-n-drop if list is empty
	* src/PageView.py: cancel drag-n-drop if list is empty
	* src/ViewManager.py (ViewManager.about): destroy About dialog 
	after running
	* src/Editors/_EditPerson.py: Change Unknown Gender dialog to allow
	the user to specify without going back to the main window
	* src/plugins/RemoveUnused.py: cleanup

2006-11-06  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.

2006-11-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Add street to place page.
	* src/plugins/NarrativeWeb.py: Add family event gallery items to 
	  individual page

2006-11-05  Don Allingham  <don@gramps-project.org>
	* src/plugins/Makefile.am: add RemoveUnused.py