@@ -1,5 +1,7 @@
 2006-11-08  Don Allingham  <don@gramps-project.org>
-	* src/DataViews/_RelationView.py: add toolbar buttons
+	* src/DataViews/_RelationView.py: add toolbar buttons, catch edit
+	button config value change
+	* src/GrampsCfg.py: reorder options
 	* src/images/Makefile.am: install new svg files
 	* src/images/parents.svg: button for toolbar
 	* src/images/spouse.svg: button for toolbar
